fix: adding comments and few corrections + adding icon

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Wallet Tracker</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/icon.ico') }}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Portfolio Tracker</a>
+        <a class="navbar-brand" href="/">Wallet Tracker</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="/fonds">Fonds</a></li>
@@ -17,11 +18,11 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Bienvenue sur Portfolio Tracker</h1>
+        <h1>Bienvenue sur Wallet Tracker</h1>
         <p>Utilise la barre de navigation pour te déplacer entre les fonds et les instruments.</p>
         <hr>
         <h3>Contexte et Objectif de l'Application</h3>
-        <p>Le Portfolio Tracker est une application conçue pour aider les investisseurs à gérer et suivre leurs fonds d'investissement ainsi que les instruments financiers qu'ils contiennent.</p>
+        <p>Wallet Tracker est une application conçue pour aider les investisseurs à gérer et suivre leurs fonds d'investissement ainsi que les instruments financiers qu'ils contiennent.</p>
         <p>Les principales fonctionnalités de l'application incluent :</p>
         <ul>
             <li><strong>Gestion des Fonds :</strong> Visualiser et ajouter des fonds d'investissement. Chaque fonds peut contenir plusieurs instruments financiers.</li>
