--- a/app/templates/view_funds.html
+++ b/app/templates/view_funds.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Portfolio Tracker</a>
+        <a class="navbar-brand" href="/">Wallet Tracker</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="/fonds">Fonds</a></li>
