--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="/fonds">Fonds</a></li>
                 <li class="nav-item"><a class="nav-link" href="/instruments">Instruments</a></li>
+                <li class="nav-item"><a class="nav-link" href="/create_template">Créer un Template</a></li>
             </ul>
         </div>
     </nav>
